--- a/static/css/latest.css
+++ b/static/css/latest.css
@@ -324,7 +324,7 @@ body {
 .hero-image-placeholder {
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2937,7 +2937,7 @@ body {
 .hero-section .carousel-item .hero-image-placeholder {
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
